Link hover states

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <img src="triangle.png" class="triangle">
     <p>Designer, Google Chrome</p>
     <ul class="links">
-      <li><a href="mailto:chris@chrsl.net">Email</a></li>
-      <li><a href="https://twitter.com/cleerview">Twitter</a></li>
-      <li><a href="http://dribbble.com/Cleer">Dribbble</a></li>
+      <li><a href="mailto:chris@chrsl.net"><span class="spaced">Emai</span>l</a></li>
+      <li><a href="https://twitter.com/cleerview"><span class="spaced">Twitte</span>r</a></li>
+      <li><a href="http://dribbble.com/Cleer"><span class="spaced">Dribbbl</span>e</a></li>
     </ul>
   </section>
   <section class="quotes">
