Update about page to use Tachyons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Chris Lee</title>
+  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.5.3/css/tachyons.min.css"/>
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript">
     var _gaq = _gaq || [];
@@ -17,26 +18,38 @@
    })();
   </script>
 </head>
-<body id="particles">
-  <section class="self">
-    <h1 class="self-name">Chris Lee</h1>
-    <p class="self-description">Designer, Google Chrome</p>
-    <ul class="self-links">
-      <li><a href="mailto:chris@chrsl.net"><span class="spaced">Emai</span>l</a></li>
-      <li><a href="https://twitter.com/cleerview"><span class="spaced">Twitte</span>r</a></li>
-      <li><a href="http://dribbble.com/Cleer"><span class="spaced">Dribbbl</span>e</a></li>
-    </ul>
+<body class="charter lh-copy antialiased" id="particles">
+  <section class="dt w-100 min-vh-100 pa4 pv5 pa5-ns bg-cl-dark-blue white">
+    <div class="dtc v-mid">
+      <h1 class="self-name f3 cl-cyan ttu tracked-mega mb1">Chris Lee</h1>
+      <p class="self-description mb5">Designer, Google Chrome</p>
+      <ul class="gill-sans f6 ttu list pl0">
+        <li class="mv2"><a href="mailto:chris@chrsl.net" class="link white-70 underline-hover"><span class="tracked-mega">Emai</span>l</a></li>
+        <li class="mv2"><a href="https://twitter.com/cleerview" class="link white-70 underline-hover"><span class="tracked-mega">Twitte</span>r</a></li>
+        <li class="mv2"><a href="http://dribbble.com/Cleer" class="link white-70 underline-hover"><span class="tracked-mega">Dribbbl</span>e</a></li>
+      </ul>
+    </div>
   </section>
-  <section class="quotes">
-    <blockquote class="quotes-quote">
-      <p><strong>The work has enough love when enthusiasm transfers from the maker to the audience and bonds them.</strong> Both are enthusiastic about the design.</p>
-      <p>I can imagine the excitement in the room when Stradivari would hand his newest violin to a skilled musician, because the violinist would <strong>unlock the instrument’s full potential by playing it</strong>. The products of design, like Stradivari’s violins, possess an aspect that can only be revealed through their use.</p>
-      <cite class="quotes-citation"><p class="quotes-author">Frank Chimero</p><p class="quotes-book">The Shape of Design</p></cite>
+  <section class="min-vh-100 pa4 pv5 pa5-ns bg-cl-red-gradient cl-light-salmon">
+    <blockquote class="mt4 mb5">
+      <div class="f4-l mb3 lh-large measure-wide">
+        <p class="mb3"><strong class="white">The work has enough love when enthusiasm transfers from the maker to the audience and bonds them.</strong> Both are enthusiastic about the design.</p>
+        <p>I can imagine the excitement in the room when Stradivari would hand his newest violin to a skilled musician, because the violinist would <strong class="white">unlock the instrument’s full potential by playing it</strong>. The products of design, like Stradivari’s violins, possess an aspect that can only be revealed through their use.</p>
+      </div>
+      <cite class="cl-salmon">
+        <p class="gill-sans f6 ttu tracked-mega">Frank Chimero</p>
+        <p class="i">The Shape of Design</p>
+      </cite>
     </blockquote>
-    <blockquote class="quotes-quote">
-      <p>The violin-maker has made beautiful instruments, and has called musicians to make wonderful music with them; but the musicians have refused, and have tried to play tunes on bits of scrappy wood and grass they have found lying about the place.</p>
-      <p>It is no good the violin-maker wringing his hands and deciding to do without the musicians; they are needed if the violins are to make the music they are supposed to make. He has to set about <strong>rescuing the musicians from their folly</strong>, not just for their own sake (because it’s frustrating and dishonouring for them to try to get music out of lifeless objects) but because <strong>they are needed precisely to make the wonderful music he had in mind all along</strong>.</p>
-      <cite class="quotes-citation"><p class="quotes-author">NT Wright</p><p class="quotes-book">Paul and the Faithfulness of God</p></cite>
+    <blockquote class="mb4">
+      <div class="f4-l mb3 lh-large measure-wide">
+        <p class="mb3">The violin-maker has made beautiful instruments, and has called musicians to make wonderful music with them; but the musicians have refused, and have tried to play tunes on bits of scrappy wood and grass they have found lying about the place.</p>
+        <p>It is no good the violin-maker wringing his hands and deciding to do without the musicians; they are needed if the violins are to make the music they are supposed to make. He has to set about <strong class="white">rescuing the musicians from their folly</strong>, not just for their own sake (because it’s frustrating and dishonouring for them to try to get music out of lifeless objects) but because <strong class="white">they are needed precisely to make the wonderful music he had in mind all along</strong>.</p>
+      </div>
+      <cite class="cl-salmon">
+        <p class="gill-sans f6 ttu tracked-mega">NT Wright</p>
+        <p class="i">Paul and the Faithfulness of God</p>
+      </cite>
     </blockquote>
   </section>
   <script src="particles.min.js"></script>
