--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Chris Lee</title>
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.5.3/css/tachyons.min.css"/>
-  <link rel="stylesheet" href="work.css">
+  <link rel="stylesheet" href="style.css">
   <script type="text/javascript">
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-19583432-1']);
@@ -18,7 +18,7 @@
    })();
   </script>
 </head>
-<body class="bg-cl-light-gray dark-gray charter lh-copy mw7 pa3 pt4 pa5-ns">
+<body class="bg-cl-light-gray dark-gray charter lh-copy mw7 pa4 pt4 pa5-ns">
   <section class="mb5 pb5 bb b--black-10">
     <p class="gill-sans f6 ttu tracked lh-title">The work of</p>
     <h1 class="f3 ttu orange tracked-mega">Chris Lee</h1>
@@ -99,7 +99,7 @@
     </div>
     <p class="lh-large">Along with a team of volunteers, I designed an interactive app version of the latest book by bestselling Christian author Francis Chan. The app allows readers to share insights from the book through text or video. The proceeds of this project went towards relieving <a href="https://vimeo.com/107938492" class="dark-gray hover-orange">poverty-induced prostitution</a> in Ethiopia.</p>
   </section>
-  <section class="mb5">
+  <section>
     <div class="cf mb2">
       <img src="images/nepal-icon.png" class="w-icon fl-ns mr3 br-icon shadow-icon">
       <h2 class="b">Nepal Human Development Report</h2>
