Added nav bar between pages

--- a/work.html
+++ b/work.html
@@ -18,104 +18,112 @@
    })();
   </script>
 </head>
-<body class="bg-cl-light-gray dark-gray charter lh-copy mw7 pa4 pt4 pa5-ns">
-  <section class="mb5 pb5 bb b--black-10">
-    <p class="gill-sans f6 ttu tracked lh-title">The work of</p>
-    <h1 class="f3 ttu orange tracked-mega">Chris Lee</h1>
-    <div class="mt4">
-      <p class="f3 mb4">I design software systems—at scales I can hardly fathom—with conviction that each individual user matters.</p>
-      <h2 class="gill-sans f6 ttu tracked-mega mb2">Skills</h2>
-      <div class="cf mnh1">
-        <div class="fl w-50 w-third-l pa1">
-          <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Product strategy</div>
-        </div>
-        <div class="fl w-50 w-third-l pa1">
-          <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Interaction design</div>
-        </div>
-        <div class="fl w-50 w-third-l pa1">
-          <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Visual design</div>
-        </div>
-        <div class="fl w-50 w-third-l pa1">
-          <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Motion design</div>
-        </div>
-        <div class="fl w-50 w-third-l pa1">
-          <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Prototyping</div>
-        </div>
-        <div class="fl w-50 w-third-l pa1">
-          <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Web development</div>
+<body class="bg-cl-light-gray dark-gray">
+  <nav class="gill-sans f6 ttu w-100 bb b--black-10">
+    <ul class="list ph4 ph5-ns">
+      <li class="dib mr4"><a href="/" class="link dark-gray hover-orange pv3"><span class="tracked-mega">Abou</span>t</a></li>
+      <li class="dib bb bw1 dark-gray pv3"><span class="tracked-mega">Wor</span>k</li>
+    </ul>
+  </nav>
+  <main class="charter lh-copy mw7 pa4 pt4 pa5-ns">
+    <section class="mb5 pb5 bb b--black-10">
+      <p class="gill-sans f6 ttu tracked lh-title">The work of</p>
+      <h1 class="f3 ttu orange tracked-mega">Chris Lee</h1>
+      <div class="mt4">
+        <p class="f3 mb4">I design software systems—at scales I can hardly fathom—with conviction that each individual user matters.</p>
+        <h2 class="gill-sans f6 ttu tracked-mega mb2">Skills</h2>
+        <div class="cf mnh1">
+          <div class="fl w-50 w-third-l pa1">
+            <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Product strategy</div>
+          </div>
+          <div class="fl w-50 w-third-l pa1">
+            <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Interaction design</div>
+          </div>
+          <div class="fl w-50 w-third-l pa1">
+            <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Visual design</div>
+          </div>
+          <div class="fl w-50 w-third-l pa1">
+            <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Motion design</div>
+          </div>
+          <div class="fl w-50 w-third-l pa1">
+            <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Prototyping</div>
+          </div>
+          <div class="fl w-50 w-third-l pa1">
+            <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Web development</div>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
-  <section class="mb5">
-    <div class="cf mb2">
-      <img src="images/chrome-icon.png" class="w-icon fl-ns mr3 br-icon shadow-icon">
-      <h2 class="b">Google Chrome</h2>
-      <p>San Francisco, California. 2013 to present.</p>
-    </div>
-    <p class="lh-large">Chrome is the web browser of choice for over a billion people around the world. Designing something that works for all these people this takes lots of patience and deliberation. Most of my work here is future-facing and not yet released.</p>
-  </section>
-  <section class="mb5">
-    <div class="cf mb2">
-      <img src="images/abide-icon.png" class="w-icon fl-ns mr3 br-icon shadow-icon">
-      <h2 class="b">Abide</h2>
-      <p>Menlo Park, California. 2015 to present.</p>
-    </div>
-    <p class="lh-large">Abide has helped millions of Christians pray through guided audio prayers. The startup comprises full-time employees and regular volunteer with Silicon Valley tecnical expertise. I work on design and web development.</p>
-    <div class="cf mt3">
-      <figure class="fl w-50">
-        <img src="images/abide-1.png">
-        <figcaption class="gray f6">I designed and built the marketing site at <a href="https://abide.is/" class="dark-gray hover-orange">abide.is</a></figcaption>
-      </figure>
-      <figure class="fl w-50">
-        <img src="images/abide-2.jpg">
-      </figure>
-    </div>
-  </section>
-  <section class="mb5">
-    <div class="cf mb2">
-      <img src="images/afriscout-icon.png" class="w-icon fl-ns mr3 br-icon shadow-icon">
-      <h2 class="b">AfriScout</h2>
-      <p>Nairobi, Kenya with Google.org, PCI Global, and iHub. August 2016.</p>
-    </div>
-    <p class="lh-large">Drought has devastated the hundreds of millions of <a href="https://medium.com/@PCI/innovative-satellite-solutions-to-ethiopia-s-drought-2b4ae64b200e" class="dark-gray hover-orange">nomadic pastoralists</a> across Africa. In 2013, nonprofit PCI Global began a successful project to use satellite maps to help pastoralists make more informed decisions about herd migration. Our team deployed by Google.org collaborated with PCI to design a way to scale the project from paper map distribution to a digital solution.</p>
-    <div class="cf mt3">
-      <figure class="fl w-50">
-        <img src="images/afriscout-1.jpg">
-        <figcaption class="gray f6">We designed the app collaboratively in one week using the design sprint methodology</figcaption>
-      </figure>
-      <figure class="fl w-50">
-        <img src="images/afriscout-2.jpg">
-        <figcaption class="gray f6">I built an interactive prototype which we took to a Maasai village for interviews</figcaption>
-      </figure>
-    </div>
-  </section>
-  </section>
-  <section class="mb5">
-    <div class="cf mb2">
-      <img src="images/ymf-icon.png" class="w-icon fl-ns mr3 br-icon shadow-icon">
-      <h2 class="b">You and Me Forever</h2>
-      <p>Mountain View, California with Crazy Love. 2014 to 2015.</p>
-    </div>
-    <p class="lh-large">Along with a team of volunteers, I designed an interactive app version of the latest book by bestselling Christian author Francis Chan. The app allows readers to share insights from the book through text or video. The proceeds of this project went towards relieving <a href="https://vimeo.com/107938492" class="dark-gray hover-orange">poverty-induced prostitution</a> in Ethiopia.</p>
-  </section>
-  <section>
-    <div class="cf mb2">
-      <img src="images/nepal-icon.png" class="w-icon fl-ns mr3 br-icon shadow-icon">
-      <h2 class="b">Nepal Human Development Report</h2>
-      <p>Kathmandu, Nepal with Google.org and Kathmandu Living Labs. July 2015.</p>
-    </div>
-    <p class="lh-large">Google.org deployed a team of volunteers to help non-profits in post-earthquake Nepal with technical needs. My teammate Sumier Phalake and I collaborated with local tech nonprofit Kathmandu Living Labs on a project for Nepal's government to visualize human development statistics.</p>
-    <div class="cf mt3">
-      <figure class="fl w-50">
-        <img src="images/nepal-1.jpg">
-        <figcaption class="gray f6">Our team at Kathmandu Living Labs</figcaption>
-      </figure>
-      <figure class="fl w-50">
-        <img src="images/nepal-2.jpg">
-        <figcaption class="gray f6">Sumier presented our work at Interaction 16 in Helsinki</figcaption>
-      </figure>
-    </div>
-  </section>
+    </section>
+    <section class="mb5">
+      <div class="cf mb2">
+        <img src="images/chrome-icon.png" class="w-icon fl-ns mr3 br-icon shadow-icon">
+        <h2 class="b">Google Chrome</h2>
+        <p>San Francisco, California. 2013 to present.</p>
+      </div>
+      <p class="lh-large">Chrome is the web browser of choice for over a billion people around the world. Designing something that works for all these people this takes lots of patience and deliberation. Most of my work here is future-facing and not yet released.</p>
+    </section>
+    <section class="mb5">
+      <div class="cf mb2">
+        <img src="images/abide-icon.png" class="w-icon fl-ns mr3 br-icon shadow-icon">
+        <h2 class="b">Abide</h2>
+        <p>Menlo Park, California. 2015 to present.</p>
+      </div>
+      <p class="lh-large">Abide has helped millions of Christians pray through guided audio prayers. The startup comprises full-time employees and regular volunteer with Silicon Valley tecnical expertise. I work on design and web development.</p>
+      <div class="cf mt3">
+        <figure class="fl w-50">
+          <img src="images/abide-1.png">
+          <figcaption class="gray f6">I designed and built the marketing site at <a href="https://abide.is/" class="dark-gray hover-orange">abide.is</a></figcaption>
+        </figure>
+        <figure class="fl w-50">
+          <img src="images/abide-2.jpg">
+        </figure>
+      </div>
+    </section>
+    <section class="mb5">
+      <div class="cf mb2">
+        <img src="images/afriscout-icon.png" class="w-icon fl-ns mr3 br-icon shadow-icon">
+        <h2 class="b">AfriScout</h2>
+        <p>Nairobi, Kenya with Google.org, PCI Global, and iHub. August 2016.</p>
+      </div>
+      <p class="lh-large">Drought has devastated the hundreds of millions of <a href="https://medium.com/@PCI/innovative-satellite-solutions-to-ethiopia-s-drought-2b4ae64b200e" class="dark-gray hover-orange">nomadic pastoralists</a> across Africa. In 2013, nonprofit PCI Global began a successful project to use satellite maps to help pastoralists make more informed decisions about herd migration. Our team deployed by Google.org collaborated with PCI to design a way to scale the project from paper map distribution to a digital solution.</p>
+      <div class="cf mt3">
+        <figure class="fl w-50">
+          <img src="images/afriscout-1.jpg">
+          <figcaption class="gray f6">We designed the app collaboratively in one week using the design sprint methodology</figcaption>
+        </figure>
+        <figure class="fl w-50">
+          <img src="images/afriscout-2.jpg">
+          <figcaption class="gray f6">I built an interactive prototype which we took to a Maasai village for interviews</figcaption>
+        </figure>
+      </div>
+    </section>
+    </section>
+    <section class="mb5">
+      <div class="cf mb2">
+        <img src="images/ymf-icon.png" class="w-icon fl-ns mr3 br-icon shadow-icon">
+        <h2 class="b">You and Me Forever</h2>
+        <p>Mountain View, California with Crazy Love. 2014 to 2015.</p>
+      </div>
+      <p class="lh-large">Along with a team of volunteers, I designed an interactive app version of the latest book by bestselling Christian author Francis Chan. The app allows readers to share insights from the book through text or video. The proceeds of this project went towards relieving <a href="https://vimeo.com/107938492" class="dark-gray hover-orange">poverty-induced prostitution</a> in Ethiopia.</p>
+    </section>
+    <section>
+      <div class="cf mb2">
+        <img src="images/nepal-icon.png" class="w-icon fl-ns mr3 br-icon shadow-icon">
+        <h2 class="b">Nepal Human Development Report</h2>
+        <p>Kathmandu, Nepal with Google.org and Kathmandu Living Labs. July 2015.</p>
+      </div>
+      <p class="lh-large">Google.org deployed a team of volunteers to help non-profits in post-earthquake Nepal with technical needs. My teammate Sumier Phalake and I collaborated with local tech nonprofit Kathmandu Living Labs on a project for Nepal's government to visualize human development statistics.</p>
+      <div class="cf mt3">
+        <figure class="fl w-50">
+          <img src="images/nepal-1.jpg">
+          <figcaption class="gray f6">Our team at Kathmandu Living Labs</figcaption>
+        </figure>
+        <figure class="fl w-50">
+          <img src="images/nepal-2.jpg">
+          <figcaption class="gray f6">Sumier presented our work at Interaction 16 in Helsinki</figcaption>
+        </figure>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
