--- a/work.html
+++ b/work.html
@@ -55,16 +55,16 @@
       </div>
     </section>
     <section class="mb5">
-      <div class="cf mb2">
-        <img src="images/chrome-icon.png" class="w-icon fl-ns mr3 br-icon shadow-icon">
+      <div class="cf mb3 tc tl-ns">
+        <img src="images/chrome-icon.png" class="w-icon fl-ns mr3-ns br-icon shadow-icon">
         <h2 class="b">Google Chrome</h2>
         <p>San Francisco, California. 2013 to present.</p>
       </div>
       <p class="lh-large">Chrome is the web browser of choice for over a billion people around the world. Designing something that works for all these people this takes lots of patience and deliberation. Most of my work here is future-facing and not yet released.</p>
     </section>
     <section class="mb5">
-      <div class="cf mb2">
-        <img src="images/abide-icon.png" class="w-icon fl-ns mr3 br-icon shadow-icon">
+      <div class="cf mb3 tc tl-ns">
+        <img src="images/abide-icon.png" class="w-icon fl-ns mr3-ns br-icon shadow-icon">
         <h2 class="b">Abide</h2>
         <p>Menlo Park, California. 2015 to present.</p>
       </div>
@@ -80,8 +80,8 @@
       </div>
     </section>
     <section class="mb5">
-      <div class="cf mb2">
-        <img src="images/afriscout-icon.png" class="w-icon fl-ns mr3 br-icon shadow-icon">
+      <div class="cf mb3 tc tl-ns">
+        <img src="images/afriscout-icon.png" class="w-icon fl-ns mr3-ns br-icon shadow-icon">
         <h2 class="b">AfriScout</h2>
         <p>Nairobi, Kenya with Google.org, PCI Global, and iHub. August 2016.</p>
       </div>
@@ -99,16 +99,16 @@
     </section>
     </section>
     <section class="mb5">
-      <div class="cf mb2">
-        <img src="images/ymf-icon.png" class="w-icon fl-ns mr3 br-icon shadow-icon">
+      <div class="cf mb3 tc tl-ns">
+        <img src="images/ymf-icon.png" class="w-icon fl-ns mr3-ns br-icon shadow-icon">
         <h2 class="b">You and Me Forever</h2>
         <p>Mountain View, California with Crazy Love. 2014 to 2015.</p>
       </div>
       <p class="lh-large">Along with a team of volunteers, I designed an interactive app version of the latest book by bestselling Christian author Francis Chan. The app allows readers to share insights from the book through text or video. The proceeds of this project went towards relieving <a href="https://vimeo.com/107938492" class="dark-gray hover-orange">poverty-induced prostitution</a> in Ethiopia.</p>
     </section>
     <section>
-      <div class="cf mb2">
-        <img src="images/nepal-icon.png" class="w-icon fl-ns mr3 br-icon shadow-icon">
+      <div class="cf mb3 tc tl-ns tc tl-ns">
+        <img src="images/nepal-icon.png" class="w-icon fl-ns mr3-ns br-icon shadow-icon">
         <h2 class="b">Nepal Human Development Report</h2>
         <p>Kathmandu, Nepal with Google.org and Kathmandu Living Labs. July 2015.</p>
       </div>
