--- a/work.html
+++ b/work.html
@@ -110,7 +110,7 @@
       <div class="cf mb3 tc tl-ns tc tl-ns">
         <img src="images/nepal-icon.png" class="w-icon fl-ns mr3-ns br-icon shadow-icon">
         <h2 class="b">Nepal Human Development Report</h2>
-        <p>Kathmandu, Nepal with Google.org and Kathmandu Living Labs. July 2015.</p>
+        <p>Kathmandu, Nepal with Google and Kathmandu Living Labs. July 2015.</p>
       </div>
       <p class="lh-large">Google.org deployed a team of volunteers to help non-profits in post-earthquake Nepal with technical needs. My teammate Sumier Phalake and I collaborated with local tech nonprofit Kathmandu Living Labs on a project for Nepal's government to visualize human development statistics.</p>
       <div class="cf mt3">
