--- a/work.html
+++ b/work.html
@@ -104,7 +104,7 @@
         <h2 class="b">You and Me Forever</h2>
         <p>Mountain View, California with Crazy Love. 2014 to 2015.</p>
       </div>
-      <p class="lh-large">Along with a team of volunteers, I designed an interactive app version of the latest book by bestselling Christian author Francis Chan. The app allows readers to share insights from the book through text or video. The proceeds of this project went towards relieving <a href="https://vimeo.com/107938492" class="dark-gray hover-orange">poverty-induced prostitution</a> in Ethiopia.</p>
+      <p class="lh-large">Along with a team of volunteers, I designed an interactive app version of the latest book by bestselling Christian author Francis Chan. The app allows readers to share insights from the book through text or video. The proceeds of this project are helping relieve <a href="https://vimeo.com/107938492" class="dark-gray hover-orange">poverty-induced prostitution</a> in Ethiopia.</p>
     </section>
     <section>
       <div class="cf mb3 tc tl-ns tc tl-ns">
