--- a/work.html
+++ b/work.html
@@ -68,7 +68,7 @@
         <h2 class="b">Abide</h2>
         <p>Menlo Park, California. 2015 to present.</p>
       </div>
-      <p class="lh-large">Abide has helped millions of Christians pray through guided audio prayers. The startup comprises full-time employees and regular volunteer with Silicon Valley tecnical expertise. I work on design and web development.</p>
+      <p class="lh-large">Abide has helped millions of Christians pray through guided audio prayers. The startup comprises full-time employees and regular volunteers applying Silicon Valley technical expertise to spiritual practice. I work on design and web development.</p>
       <div class="cf mt3">
         <figure class="fl w-50">
           <img src="images/abide-1.png">
@@ -104,7 +104,7 @@
         <h2 class="b">You and Me Forever</h2>
         <p>Mountain View, California with Crazy Love. 2014 to 2015.</p>
       </div>
-      <p class="lh-large">Along with a team of volunteers, I designed an interactive app version of the latest book by bestselling Christian author Francis Chan. The app allows readers to share insights from the book through text or video. The proceeds of this project are helping relieve <a href="https://vimeo.com/107938492" class="dark-gray hover-orange">poverty-induced prostitution</a> in Ethiopia.</p>
+      <p class="lh-large">Along with a team of volunteers, I designed an interactive app version of the latest book by bestselling Christian author Francis Chan. The app allows readers to share their insights through text or video. The proceeds of this project are helping relieve <a href="https://vimeo.com/107938492" class="dark-gray hover-orange">poverty-induced prostitution</a> in Ethiopia.</p>
     </section>
     <section>
       <div class="cf mb3 tc tl-ns tc tl-ns">
@@ -112,7 +112,7 @@
         <h2 class="b">Nepal Human Development Report</h2>
         <p>Kathmandu, Nepal with Google and Kathmandu Living Labs. July 2015.</p>
       </div>
-      <p class="lh-large">Google.org deployed a team of volunteers to help non-profits in post-earthquake Nepal with technical needs. My teammate Sumier Phalake and I collaborated with local tech nonprofit Kathmandu Living Labs on a project for Nepal's government to visualize human development statistics.</p>
+      <p class="lh-large">Google deployed a team of volunteers to help nonprofits in post-earthquake Nepal with technical needs. My teammate Sumier and I collaborated with local tech nonprofit Kathmandu Living Labs on a project for Nepal's government to visualize human development statistics. The result is now available on the <a href="http://www.npc.gov.np/human_development_indicators_by_district/" class="dark-gray hover-orange">government's website</a>.</p>
       <div class="cf mt3">
         <figure class="fl w-50">
           <img src="images/nepal-1.jpg">
