--- a/work.html
+++ b/work.html
@@ -60,7 +60,7 @@
         <h2 class="b">Google Chrome</h2>
         <p>San Francisco, California. 2013 to present.</p>
       </div>
-      <p class="lh-large">Chrome is the web browser of choice for over a billion people around the world. Designing something that works for all these people this takes lots of patience and deliberation. Most of my work here is future-facing and not yet released.</p>
+      <p class="lh-large">Chrome is the web browser of choice for over a billion people around the world. Designing something that works for all these people takes lots of patience and deliberation. Most of my work here is future-facing and not yet released.</p>
     </section>
     <section class="mb5">
       <div class="cf mb3 tc tl-ns">
