Tweak nav style

--- a/work.html
+++ b/work.html
@@ -21,8 +21,8 @@
 <body class="bg-cl-light-gray dark-gray">
   <nav class="gill-sans f6 ttu w-100 bb b--black-10">
     <ul class="list ph4 ph5-ns">
-      <li class="dib mr4"><a href="/" class="link dark-gray hover-orange pv3"><span class="tracked-mega">Abou</span>t</a></li>
-      <li class="dib bb bw1 dark-gray pv3"><span class="tracked-mega">Wor</span>k</li>
+      <li class="dib mr4"><a href="/" class="link mid-gray hover-orange pv3"><span class="tracked-mega">Abou</span>t</a></li>
+      <li class="dib bb bw1 dark-gray pv3" style="margin-bottom: -1px"><span class="tracked-mega">Wor</span>k</li>
     </ul>
   </nav>
   <main class="charter lh-copy mw7 pa4 pt4 pa5-ns">
