Edit Abide dates

--- a/work.html
+++ b/work.html
@@ -66,9 +66,9 @@
       <div class="cf mb3 tc tl-ns">
         <img src="images/abide-icon.png" class="w-icon fl-ns mr3-ns br-icon shadow-icon">
         <h2 class="b">Abide</h2>
-        <p>Menlo Park, California. 2015 to present.</p>
+        <p>Menlo Park, California. 2015 to 2017.</p>
       </div>
-      <p class="lh-large">Abide has helped millions of Christians pray through guided audio prayers. The startup comprises full-time employees and regular volunteers applying Silicon Valley technical expertise to spiritual practice. I work on design and web development.</p>
+      <p class="lh-large">Abide has helped millions of Christians pray through guided audio prayers. The startup comprises full-time employees and regular volunteers applying Silicon Valley technical expertise to spiritual practice. I worked on design and web development.</p>
       <div class="cf mt3">
         <figure class="fl w-50">
           <img src="images/abide-1.png">
